Do not use MutableARGPath in ErrorPathShrinker, it is fully sufficient to use List<CFAEdge> because the states in the path are never used.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@13152 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c